# app

./: .chunkhound.json  .gitignore  .gitmodules  .lsp.json  .markdownlint.json  .markdownlintignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  BLOCKERS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  VERSIONS  WORKING-DOCUMENT.md  build.rs  clippy.toml  components.json  dev-dashboard.html  dev.mjs  engagement-infrastructure.md  eslint.config.js  go-to-market.md  launch-timeline.md  orqa-plugin.json  package-lock.json  package.json  registry.json  svelte.config.js  tsconfig.base.json  tsconfig.json  validation_stderr.txt  vite.config.ts  vitest.config.ts
.claude-plugin/: plugin.json  (+1 more)
app/src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/migrations/: 008_health_snapshots.sql  011_health_snapshots_outlier.sql
app/src-tauri/src/: daemon_client.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  startup.rs  state.rs  watcher.rs
app/src-tauri/src/cli_tools/: runner.rs
app/src-tauri/src/commands/: artifact_commands.rs  cli_tool_commands.rs  daemon_commands.rs  devtools_commands.rs  enforcement_commands.rs  graph_commands.rs  helpers.rs  hook_commands.rs  lesson_commands.rs  message_commands.rs  mod.rs  plugin_commands.rs  project_commands.rs  project_settings_commands.rs  search_commands.rs  session_commands.rs  settings_commands.rs  setup_commands.rs  sidecar_commands.rs  status_transition_commands.rs  stream_commands.rs
daemon/: Cargo.toml
daemon/src/: compact_context.rs  config.rs  context.rs  correlation.rs  event_bus.rs  event_store.rs  graph_state.rs  health.rs  issue_group_consumer.rs  knowledge.rs  lib.rs  logging.rs  lsp.rs  main.rs  mcp.rs  middleware.rs  parse.rs  process.rs  prompt.rs  session_start.rs  store.rs  subprocess.rs  surreal_live.rs  tray.rs  watcher.rs
daemon/src/routes/: admin_migrate.rs  agents.rs  artifacts.rs  cli_tools.rs  content.rs  devtools.rs  devtools_sessions.rs  enforcement.rs  git.rs  graph.rs  health_snapshots.rs  hooks.rs  import.rs  issue_groups.rs  lessons.rs  messages.rs  mod.rs  plugins.rs  projects.rs  prompt.rs  search.rs  sessions.rs  settings.rs  setup.rs  sidecar.rs  startup.rs  streaming.rs  themes.rs  validation.rs  violations.rs  watcher.rs  workflow.rs
daemon/tests/: routes_admin_migrate.rs  routes_artifacts.rs  routes_enforcement.rs  routes_graph.rs  routes_import.rs  routes_lessons.rs  routes_misc.rs  routes_plugin_installation.rs  routes_plugins.rs  routes_surreal_live.rs  routes_validation.rs  smoke.rs
daemon/tests/helpers/: mod.rs
devtools/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
devtools/src-tauri/capabilities/: default.json
devtools/src-tauri/src/: dev_controller.rs  events.rs  issue_group_commands.rs  lib.rs  main.rs  process_status.rs  session_commands.rs
engine/agent/: Cargo.toml
engine/agent/src/: agent_tests.rs  lib.rs  types.rs
engine/artifact/: Cargo.toml
engine/artifact/src/: fs.rs  lib.rs  reader.rs
engine/core/: Cargo.toml
engine/core/src/: agent.rs  config.rs  enforcement.rs  error.rs  graph.rs  lib.rs  paths.rs  platform.rs  plugin.rs  prompt.rs  search.rs  validation.rs  workflow.rs
engine/enforcement/: Cargo.toml
engine/enforcement/src/: engine.rs  lib.rs  parser.rs  scanner.rs  store.rs
engine/graph/: Cargo.toml
engine/graph-db/: Cargo.toml
engine/graph-db/benches/: poc.rs
engine/graph-db/examples/: live_probe.rs
engine/graph-db/src/: ingest.rs  lib.rs  queries.rs  schema.rs  tests.rs  writers.rs
engine/graph/src/: build.rs  build_tests.rs  error.rs  lib.rs  merge.rs  metrics.rs  metrics_tests.rs  surreal.rs  surreal_queries.rs  sync.rs  writers.rs
engine/lesson/: Cargo.toml
engine/lesson/src/: lib.rs  store.rs
engine/mcp-server/: Cargo.toml
engine/mcp-server/src/: daemon.rs  error.rs  graph.rs  lib.rs  mcp_tests.rs  server.rs  settings.rs  types.rs
engine/plugin/: Cargo.toml
engine/plugin/src/: cli_runner.rs  collision.rs  constraints.rs  content.rs  discovery.rs  hooks.rs  installer.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs
engine/plugin/tests/: real_manifests.rs
engine/project/: Cargo.toml
engine/project/src/: git.rs  lib.rs  scanner.rs  settings.rs  store.rs
engine/prompt/: Cargo.toml
engine/prompt/src/: builder.rs  knowledge.rs  lib.rs  session_title.rs
engine/storage/: Cargo.toml
engine/storage/migration/: Cargo.toml
engine/storage/src/: error.rs  frozen.rs  lib.rs  migrate.rs  schema.rs  traits.rs
engine/streaming/: Cargo.toml
engine/streaming/src/: lib.rs  protocol.rs  stream_loop.rs  tools.rs
engine/types/: Cargo.toml
engine/types/src/: config.rs  fingerprint.rs  lib.rs  paths.rs  platform.rs  ports.rs
engine/validation/: Cargo.toml  build.rs
engine/validation/src/: auto_fix.rs  content.rs  context.rs  daemon.rs  error.rs  graph.rs  hooks.rs  lib.rs  metrics.rs  parse.rs  platform.rs  settings.rs  types.rs
engine/validation/tmp/: fix_err.txt  fix_out.json  governance-context.md
engine/workflow/: Cargo.toml
engine/workflow/src/: gates.rs  lib.rs  state.rs  tracker.rs  transitions.rs
libs/db/: Cargo.toml
libs/db/src/: devtools.rs  error.rs  health_snapshots.rs  issue_groups.rs  lib.rs  messages.rs  projects.rs  sessions.rs  settings.rs  themes.rs  violations.rs
libs/engine/: Cargo.toml
libs/engine/src/: config.rs  error.rs  graph.rs  lesson.rs  lib.rs  metrics.rs  paths.rs  platform.rs  search.rs  validation.rs
libs/lsp-server/: Cargo.toml  README.md
libs/lsp-server/src/: lib.rs  server.rs  types.rs  validation.rs
libs/mcp-server/: Cargo.toml  README.md
libs/mcp-server/src/: daemon.rs  error.rs  graph.rs  server.rs  settings.rs
libs/mcp-server/tmp/: governance-context.md
libs/search/: Cargo.toml  README.md
libs/search/src/: chunker.rs  embedder.rs  error.rs  store.rs
libs/validation/: Cargo.toml  README.md  build.rs
libs/validation/src/: auto_fix.rs  content.rs  context.rs  daemon.rs  graph.rs  hooks.rs  lib.rs  metrics.rs  parse.rs  platform.rs  types.rs
(+9498 files in other folders)
