[workspace]
members = [
    "libs/engine",
    "libs/validation",
    "libs/search",
    "libs/mcp-server",
    "libs/lsp-server",
    "app/src-tauri",
    "daemon",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# Tauri commands require owned State<> and String params
needless_pass_by_value = "allow"
