# Cargo manifest for the orqa-daemon binary crate.
# The daemon is a persistent Rust process that provides:
#   - System tray icon with context menu (process status, app launch)
#   - HTTP health endpoint for process monitoring
#   - File watchers for plugin/rule/workflow changes
#   - PID file management to prevent duplicate instances
[package]
name = "orqa-daemon"
version = "0.1.4-dev"
edition = "2021"
description = "OrqaStudio daemon — persistent background process for file watching, health, and system tray"

[[bin]]
name = "orqa-daemon"
path = "src/main.rs"

[lib]
name = "orqa_daemon_lib"
path = "src/lib.rs"

[dependencies]
orqa-engine = { path = "../engine/core" }
orqa-engine-types = { path = "../engine/types" }
orqa-storage = { path = "../engine/storage" }
orqa-graph = { path = "../engine/graph" }
orqa-validation = { path = "../engine/validation" }
orqa-enforcement = { path = "../engine/enforcement" }
orqa-workflow = { path = "../engine/workflow" }
orqa-lesson = { path = "../engine/lesson" }
orqa-plugin = { path = "../engine/plugin" }
orqa-project = { path = "../engine/project" }
orqa-search = { path = "../engine/search" }
orqa-prompt = { path = "../engine/prompt" }
orqa-artifact = { path = "../engine/artifact" }
orqa-streaming = { path = "../engine/streaming" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum = "0.8"
notify = "8"
notify-debouncer-full = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
toml = "0.8"
glob = "0.3"
ctrlc = "3"
socket2 = "0.5"
tray-icon = "0.21"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
# Used to drive the Win32 message pump required by tray-icon on Windows.
# tray-icon creates a hidden HWND; its window proc only fires when the
# thread that owns the window calls PeekMessage/DispatchMessage.
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
