[package]
name = "orqa-studio"
version = "0.1.4-dev"
edition = "2021"

[package.metadata.tauri]
# tauri build metadata - managed by tauri-build

[[bin]]
name = "orqa-studio"
path = "src/main.rs"

[lib]
name = "orqa_studio_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.33", features = ["bundled"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-store = { version = "2", features = [] }
tauri-plugin-window-state = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-notification = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
dirs-next = "2"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
orqa-engine = { path = "../../engine/core" }
orqa-validation = { path = "../../engine/validation" }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
notify = "8"
notify-debouncer-full = "0.6"
rand = "0.8"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
