# Cargo manifest for the orqa-engine library crate.
# This crate contains core domain type definitions shared across all engine access layers:
# the app (Tauri), the daemon, the CLI, and connectors.
[package]
name = "orqa-engine"
version = "0.1.4-dev"
edition = "2021"
description = "OrqaStudio engine — shared domain type definitions for all access layers"

[lib]
name = "orqa_engine"
path = "src/lib.rs"

[dependencies]
orqa-agent = { path = "../agent" }
orqa-artifact = { path = "../artifact" }
orqa-enforcement = { path = "../enforcement" }
orqa-engine-types = { path = "../types" }
orqa-graph = { path = "../graph" }
orqa-lesson = { path = "../lesson" }
orqa-plugin = { path = "../plugin" }
orqa-project = { path = "../project" }
orqa-prompt = { path = "../prompt" }
orqa-streaming = { path = "../streaming" }
orqa-validation = { path = "../validation" }
orqa-workflow = { path = "../workflow" }
orqa-search = { path = "../search" }

[dev-dependencies]

[lints]
workspace = true
