# Cargo manifest for the orqa-graph library crate.
# Provides the artifact graph construction, traversal, health metrics, and traceability functions.
# Depends only on orqa-engine-types for shared type definitions.
[package]
name = "orqa-graph"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio graph crate — artifact graph construction, health metrics, and traceability"

[lib]
name = "orqa_graph"
path = "src/lib.rs"

[dependencies]
orqa-engine-types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
regex = "1"
tracing = "0.1"
surrealdb = { version = "3", features = ["kv-surrealkv", "kv-mem"] }
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
