[package]
name = "orqa-mcp-server"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio MCP server — artifact graph tools over JSON-RPC stdio"

[lib]
name = "orqa_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "orqa-mcp-server"
path = "src/bin/server.rs"

[dependencies]
orqa-engine = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
socket2 = "0.5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
