# Cargo manifest for the orqa-storage crate.
# Owns the single unified SQLite database for OrqaStudio: projects, sessions,
# messages, settings, themes, violations, health snapshots, log events, and
# devtools sessions. All other crates and binaries depend on this crate for
# database access. Consolidates the four previously separate SQLite databases.
[package]
name = "orqa-storage"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio unified SQLite storage — single source of truth for all persistent data"

[lib]
name = "orqa_storage"
path = "src/lib.rs"

[dependencies]
# SeaORM with SQLite backend via sqlx. Provides async query execution, entity
# derivation, and the DatabaseConnection pool shared across async callers.
sea-orm = { version = "~2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
# Migration runner used by Storage::open to apply schema versions on startup.
sea-orm-migration = { version = "~2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-rustls"], default-features = false }
# Migration definitions: the 4 versioned schema migrations for orqa.db.
orqa-storage-migration = { path = "migration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "sync"] }
orqa-engine-types = { path = "../types" }
# async-trait is required for the repository trait definitions in traits.rs.
async-trait = "0.1"
# tempfile provides a TempDir for open_in_memory() test instances.
tempfile = "3"

[dev-dependencies]

[lints]
workspace = true
