# Cargo manifest for the orqa-engine-types foundation crate.
# Contains shared type definitions, error types, abstract traits, and utility functions
# used by all engine domain crates (agent, enforcement, workflow, prompt, plugin).
# This crate has no business logic — only data shapes, contracts, and pure helpers.
[package]
name = "orqa-engine-types"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio engine foundation — shared types, traits, errors, and utilities"

[lib]
name = "orqa_engine_types"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
