[package]
name = "orqa-validation"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio validation library — schema-driven integrity engine for the artifact graph"

[lib]
name = "orqa_validation"
path = "src/lib.rs"

[[bin]]
name = "orqa-validation"
path = "src/bin/server.rs"

[dependencies]
orqa-engine-types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
regex = "1"
jsonschema = "0.28"
tiny_http = "0.12"
notify = { version = "8.2.0", features = ["macos_fsevent"] }

[build-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
