[package]
name = "orqa-db"
version = "0.1.0"
edition = "2021"
description = "Typed HTTP client for the OrqaStudio daemon storage API"

[lib]
name = "orqa_db"
path = "src/lib.rs"

[dependencies]
orqa-engine-types = { path = "../../engine/types" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

[lints]
workspace = true
