# Cargo manifest for the orqa-engine library crate.
# This crate contains core domain type definitions shared across all engine access layers:
# the app (Tauri), the daemon, the CLI, and connectors.
[package]
name = "orqa-engine"
version = "0.1.4-dev"
edition = "2021"
description = "OrqaStudio engine — shared domain type definitions for all access layers"

[lib]
name = "orqa_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
rand = "0.8"
regex = "1"
glob = "0.3"
tracing = "0.1"
orqa-validation = { path = "../validation" }
orqa-search = { path = "../search" }
# Plugin module dependencies — minimal features only
reqwest = { version = "0.12", features = ["json"], default-features = false }
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
