[package]
name = "orqa-mcp-server"
version = "0.1.0-dev"
edition = "2021"
description = "OrqaStudio MCP server — artifact graph tools over JSON-RPC stdio"

[lib]
name = "orqa_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "orqa-mcp-server"
path = "src/bin/server.rs"

[dependencies]
orqa-search = { path = "../search" }
orqa-validation = { path = "../validation" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
